Completed scoreboard page.

--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -17,14 +17,14 @@
       <img class="logo1" src="/scoreboard/fll.png">
       <div class="event center"></div>
       <img class="logo2" src="/logos/<!--#season_selected-->.png">
-      <div class="plt center blue"></div>
-      <div class="numt center blue"></div>
-      <div class="namet left blue"></div>
-      <div class="hight center blue"></div>
-      <div class="m1t center blue"></div>
-      <div class="m2t center blue"></div>
-      <div class="m3t center blue"></div>
-      <div class="m4t center blue"></div>
+      <div class="plt center"></div>
+      <div class="numt center"></div>
+      <div class="namet left"></div>
+      <div class="hight center"></div>
+      <div class="m1t center"></div>
+      <div class="m2t center"></div>
+      <div class="m3t center"></div>
+      <div class="m4t center"></div>
       <div class="pl0 center"></div>
       <div class="num0 center"></div>
       <div class="name0 left"></div>
