--- a/src/main/resources/www/index.html
+++ b/src/main/resources/www/index.html
@@ -9,7 +9,7 @@
   <head>
 <!--#html_head-->
     <script src="main.js" type="text/javascript"></script>
-    <title><!--#str_title--></title>
+    <title><!--#str_admin_title--></title>
     </head>
   <body>
 <!--#html_body_start-->
