Better organization of admin pages

--- a/src/main/resources/www/admin/judging/index.html
+++ b/src/main/resources/www/admin/judging/index.html
@@ -4,6 +4,6 @@
  Open Source Software; you can modify and/or share it under the terms of BSD
  license file in the root directory of this project.
 -->
-<link rel="stylesheet" href="judging/judging.css">
-<script src="judging/judging.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/admin/judging/judging.css">
+<script src="/admin/judging/judging.js" type="text/javascript"></script>
 Coming soon...
