--- a/src/main/resources/www/admin/links/index.html
+++ b/src/main/resources/www/admin/links/index.html
@@ -4,34 +4,34 @@
  Open Source Software; you can modify and/or share it under the terms of BSD
  license file in the root directory of this project.
 -->
-<link rel="stylesheet" href="links/links.css">
+<link rel="stylesheet" href="/admin/links/links.css">
 <a href="/judge" target="_blank">
   <div id="links_judge" class="links_tile">
-    <img src="/links/judge.png">
+    <img src="/admin/links/judge.png">
     <p><!--#str_links_judge--></p>
   </div>
 </a>
 <a href="/referee" target="_blank">
   <div id="links_referee" class="links_tile">
-    <img src="/links/referee.png">
+    <img src="/admin/links/referee.png">
     <p><!--#str_links_referee--></p>
   </div>
 </a>
 <a href="/scoreboard" target="_blank">
   <div id="links_scoreboard" class="links_tile">
-    <img src="/links/scoreboard.png">
+    <img src="/admin/links/scoreboard.png">
     <p><!--#str_links_scoreboard--></p>
   </div>
 </a>
 <a href="/timekeeper" target="_blank">
   <div id="links_timekeeper" class="links_tile">
-    <img src="/links/timekeeper.png">
+    <img src="/admin/links/timekeeper.png">
     <p><!--#str_links_timekeeper--></p>
   </div>
 </a>
 <a href="/timer" target="_blank">
   <div id="links_timer" class="links_tile">
-    <img src="/links/timer.png">
+    <img src="/admin/links/timer.png">
     <p><!--#str_links_timer--></p>
   </div>
 </a>
