--- a/src/main/resources/www/admin/scores/index.html
+++ b/src/main/resources/www/admin/scores/index.html
@@ -4,8 +4,8 @@
  Open Source Software; you can modify and/or share it under the terms of BSD
  license file in the root directory of this project.
 -->
-<link rel="stylesheet" href="scores/scores.css">
-<script src="scores/scores.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/admin/scores/scores.css">
+<script src="/admin/scores/scores.js" type="text/javascript"></script>
 <div class="scores_container">
   <div class="heading">
     <div class="number">
