--- a/src/main/resources/www/admin/seasons/index.html
+++ b/src/main/resources/www/admin/seasons/index.html
@@ -4,8 +4,8 @@
  Open Source Software; you can modify and/or share it under the terms of BSD
  license file in the root directory of this project.
 -->
-<link rel="stylesheet" href="seasons/seasons.css">
-<script src="seasons/seasons.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/admin/seasons/seasons.css">
+<script src="/admin/seasons/seasons.js" type="text/javascript"></script>
 <div class="seasons_container">
 <!--#seasons_html-->
 </div>
