--- a/src/main/resources/www/admin/teams/index.html
+++ b/src/main/resources/www/admin/teams/index.html
@@ -4,8 +4,8 @@
  Open Source Software; you can modify and/or share it under the terms of BSD
  license file in the root directory of this project.
 -->
-<link rel="stylesheet" href="teams/teams.css">
-<script src="teams/teams.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/admin/teams/teams.css">
+<script src="/admin/teams/teams.js" type="text/javascript"></script>
 <div class="teams_container">
   <div class="heading">
     <div class="number">
