--- a/src/main/resources/www/admin/events/index.html
+++ b/src/main/resources/www/admin/events/index.html
@@ -4,8 +4,8 @@
  Open Source Software; you can modify and/or share it under the terms of BSD
  license file in the root directory of this project.
 -->
-<link rel="stylesheet" href="events/events.css">
-<script src="events/events.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/admin/events/events.css">
+<script src="/admin/events/events.js" type="text/javascript"></script>
 <div class="events_container">
   <div class="heading">
     <div class="date">
