--- a/src/main/resources/www/admin/standings/index.html
+++ b/src/main/resources/www/admin/standings/index.html
@@ -4,6 +4,6 @@
  Open Source Software; you can modify and/or share it under the terms of BSD
  license file in the root directory of this project.
 -->
-<link rel="stylesheet" href="passwords/passwords.css">
-<script src="passwords/passwords.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/admin/standings/standings.css">
+<script src="/admin/standings/standings.js" type="text/javascript"></script>
 Coming soon...
