First half of the referee pages

--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -9,8 +9,8 @@
   <head>
 <!--#html_head-->
     <title><!--#str_scoreboard_title--></title>
-    <link rel="stylesheet" href="scoreboard/scoreboard.css">
-    <script src="scoreboard/scoreboard.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/scoreboard/scoreboard.css">
+    <script src="/scoreboard/scoreboard.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container4">
