--- a/src/main/resources/www/timer/index.html
+++ b/src/main/resources/www/timer/index.html
@@ -9,8 +9,8 @@
   <head>
 <!--#html_head-->
     <title><!--#str_timer_title--></title>
-    <link rel="stylesheet" href="timer/timer.css">
-    <script src="timer/timer.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/timer/timer.css">
+    <script src="/timer/timer.js" type="text/javascript"></script>
   </head>
   <body>
 <!--#html_body_start-->
