--- a/src/main/resources/www/referee/index.html
+++ b/src/main/resources/www/referee/index.html
@@ -8,11 +8,22 @@
 <html lang="<!--#locale-->">
   <head>
 <!--#html_head-->
-    <title><!--#str_config_title--></title>
+    <title><!--#str_referee_title--></title>
+    <link rel="stylesheet" href="/referee/referee.css">
+    <script src="/referee/referee.js" type="text/javascript"></script>
   </head>
   <body>
 <!--#html_body_start-->
-    Coming soon...
+    <div class="list_container">
+      <div class="heading">
+        <!--#str_referee_heading-->
+      </div>
+      <div class="body">
+      </div>
+      <div class="search">
+        <input id="search" type="text" placeholder="&#61442;" />
+      </div>
+    </div>
 <!--#html_body_end-->
   </body>
 </html>
