--- a/src/main/resources/www/timekeeper/index.html
+++ b/src/main/resources/www/timekeeper/index.html
@@ -9,8 +9,8 @@
   <head>
 <!--#html_head-->
     <title><!--#str_timekeeper_title--></title>
-    <link rel="stylesheet" href="timekeeper/timekeeper.css">
-    <script src="timekeeper/timekeeper.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/timekeeper/timekeeper.css">
+    <script src="/timekeeper/timekeeper.js" type="text/javascript"></script>
   </head>
   <body>
 <!--#html_body_start-->
