Referee page, plus other tweaks

--- a/src/main/resources/www/admin/scores/index.html
+++ b/src/main/resources/www/admin/scores/index.html
@@ -32,5 +32,9 @@
     <div class="input">
       <input id="scores-search" type="text" placeholder="&#61442;" />
     </div>
+    <div class="actions">
+      <span id="scores-refresh" class="fa fa-fw fa-refresh" tabindex="0">
+      </span>
+    </div>
   </div>
 </div>
