--- a/src/main/resources/www/index.html
+++ b/src/main/resources/www/index.html
@@ -8,7 +8,8 @@
 <html lang="<!--#locale-->">
   <head>
 <!--#html_head-->
-    <script src="main.js" type="text/javascript"></script>
+    <script src="/common.js" type="text/javascript"></script>
+    <script src="/admin/admin.js" type="text/javascript"></script>
     <title><!--#str_admin_title--></title>
     </head>
   <body>
