--- a/src/main/resources/www/referee/index.html
+++ b/src/main/resources/www/referee/index.html
@@ -10,18 +10,49 @@
 <!--#html_head-->
     <title><!--#str_referee_title--></title>
     <link rel="stylesheet" href="/referee/referee.css">
+    <script src="/common.js" type="text/javascript"></script>
     <script src="/referee/referee.js" type="text/javascript"></script>
   </head>
   <body>
 <!--#html_body_start-->
-    <div class="list_container">
-      <div class="heading">
-        <!--#str_referee_heading-->
+    <div id="list" class="hidden">
+      <div class="list_container">
+        <div class="heading">
+          <span><!--#str_referee_heading--></span>
+        </div>
+        <div class="body">
+        </div>
+        <div class="search">
+          <div class="input">
+            <input id="search" type="text" placeholder="&#61442;" />
+          </div>
+          <div class="actions">
+            <span id="refresh" class="fa fa-fw fa-refresh" tabindex="0">
+            </span>
+          </div>
+        </div>
       </div>
-      <div class="body">
-      </div>
-      <div class="search">
-        <input id="search" type="text" placeholder="&#61442;" />
+    </div>
+    <div id="score" class="hidden">
+      <div class="score_container">
+        <div class="header">
+          <span class="match1"></span>
+          <span class="match2"></span>
+          <span class="match3"></span>
+          <span class="match4"></span>
+          <span>&nbsp;-&nbsp;</span>
+          <span class="number"></span>
+          <span>&nbsp;:&nbsp;</span>
+          <span class="name"></span>
+        </div>
+        <div class="body">
+        </div>
+        <div class="footer">
+          <button id="discard" class="fa fa-times"></button>
+          <button id="save" class="fa fa-floppy-o"></button>
+          <button id="publish" class="fa fa-send-o"></button>
+          <button id="compute"></button>
+        </div>
       </div>
     </div>
 <!--#html_body_end-->
