HydroDynamics and Into Orbit scoresheets

--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -14,9 +14,13 @@
   </head>
   <body>
     <div class="container4">
-      <img class="logo1" src="/scoreboard/fll.png">
+      <div class="logo1">
+        <img src="/scoreboard/fll.png">
+      </div>
       <div class="event center"></div>
-      <img class="logo2" src="/logos/<!--#season_selected-->.png">
+      <div class="logo2">
+        <img src="/logos/<!--#season_selected-->.png">
+      </div>
       <div class="plt center"></div>
       <div class="numt center"></div>
       <div class="namet left"></div>
