--- a/src/main/resources/www/timer/index.html
+++ b/src/main/resources/www/timer/index.html
@@ -25,11 +25,11 @@
         <div class="m25 m0 m1 m2 m3 m4 m7 m8 m9"></div>
         <div class="m31 m0 m4 m5 m6 m8 m9"></div>
         <div class="m35 m0 m1 m2 m3 m4 m7 m8 m9"></div>
-        <div class="m41 m0 m2 m3 m4 m5 m6 m8 m9"></div>
-        <div class="m42 m2 m3 m4 m5 m6 m8 m9"></div>
-        <div class="m43 m2 m3 m4 m5 m6 m8 m9"></div>
-        <div class="m44 m2 m3 m4 m5 m6 m8 m9"></div>
-        <div class="m45 m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+        <div class="m41 nc m0 m2 m3 m4 m5 m6 m8 m9"></div>
+        <div class="m42 nc m2 m3 m4 m5 m6 m8 m9"></div>
+        <div class="m43 nc m2 m3 m4 m5 m6 m8 m9"></div>
+        <div class="m44 nc m2 m3 m4 m5 m6 m8 m9"></div>
+        <div class="m45 nc m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
         <div class="m51 m0 m2 m6 m8"></div>
         <div class="m55 m0 m1 m3 m4 m5 m6 m7 m8 m9"></div>
         <div class="m61 m0 m2 m6 m8"></div>
@@ -39,8 +39,8 @@
         <div class="m73 m0 m2 m3 m5 m6 m8 m9"></div>
         <div class="m74 m0 m2 m3 m5 m6 m8 m9"></div>
         <div class="m75 m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
-        <div class="c31 m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
-        <div class="c51 m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+        <div class="c31 nc m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+        <div class="c51 nc m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
         <div class="t11 t0 t2 t3 t4 t5 t6 t7 t8 t9"></div>
         <div class="t12 t0 t2 t3 t5 t6 t7 t8 t9"></div>
         <div class="t13 t0 t2 t3 t5 t6 t7 t8 t9"></div>
@@ -50,11 +50,11 @@
         <div class="t25 t0 t1 t2 t3 t4 t7 t8 t9"></div>
         <div class="t31 t0 t4 t5 t6 t8 t9"></div>
         <div class="t35 t0 t1 t2 t3 t4 t7 t8 t9"></div>
-        <div class="t41 t0 t2 t3 t4 t5 t6 t8 t9"></div>
-        <div class="t42 t2 t3 t4 t5 t6 t8 t9"></div>
-        <div class="t43 t2 t3 t4 t5 t6 t8 t9"></div>
-        <div class="t44 t2 t3 t4 t5 t6 t8 t9"></div>
-        <div class="t45 t0 t1 t2 t3 t4 t5 t6 t7 t8 t9"></div>
+        <div class="t41 nc t0 t2 t3 t4 t5 t6 t8 t9"></div>
+        <div class="t42 nc t2 t3 t4 t5 t6 t8 t9"></div>
+        <div class="t43 nc t2 t3 t4 t5 t6 t8 t9"></div>
+        <div class="t44 nc t2 t3 t4 t5 t6 t8 t9"></div>
+        <div class="t45 nc t0 t1 t2 t3 t4 t5 t6 t7 t8 t9"></div>
         <div class="t51 t0 t2 t6 t8"></div>
         <div class="t55 t0 t1 t3 t4 t5 t6 t7 t8 t9"></div>
         <div class="t61 t0 t2 t6 t8"></div>
@@ -73,11 +73,11 @@
         <div class="o25 o0 o1 o2 o3 o4 o7 o8 o9"></div>
         <div class="o31 o0 o4 o5 o6 o8 o9"></div>
         <div class="o35 o0 o1 o2 o3 o4 o7 o8 o9"></div>
-        <div class="o41 o0 o2 o3 o4 o5 o6 o8 o9"></div>
-        <div class="o42 o2 o3 o4 o5 o6 o8 o9"></div>
-        <div class="o43 o2 o3 o4 o5 o6 o8 o9"></div>
-        <div class="o44 o2 o3 o4 o5 o6 o8 o9"></div>
-        <div class="o45 o0 o1 o2 o3 o4 o5 o6 o7 o8 o9"></div>
+        <div class="o41 nc o0 o2 o3 o4 o5 o6 o8 o9"></div>
+        <div class="o42 nc o2 o3 o4 o5 o6 o8 o9"></div>
+        <div class="o43 nc o2 o3 o4 o5 o6 o8 o9"></div>
+        <div class="o44 nc o2 o3 o4 o5 o6 o8 o9"></div>
+        <div class="o45 nc o0 o1 o2 o3 o4 o5 o6 o7 o8 o9"></div>
         <div class="o51 o0 o2 o6 o8"></div>
         <div class="o55 o0 o1 o3 o4 o5 o6 o7 o8 o9"></div>
         <div class="o61 o0 o2 o6 o8"></div>
