Added users admin page, plus:
* Removed most enumeration callback from the database object
* Cleaned up logging in the database object
* Centralize splitting of HTML parameters into the web server
* Split the Java serve<something> functions into separate sub-functions for each action
* Cleaned up the IP addres fetch on the links page
* Added a WiFi credentials QR code to the links page
* Moved the links page to the main page, with a link to the admin page
* Added a login page for the web server, protecting portions of the application

--- a/src/main/resources/www/admin/scores/index.html
+++ b/src/main/resources/www/admin/scores/index.html
@@ -30,7 +30,7 @@
   <div class="body"></div>
   <div class="search">
     <div class="input">
-      <input id="scores-search" type="text" placeholder="&#61442;" />
+      <input id="scores-search" type="text" placeholder="&#xf002;" />
     </div>
     <div class="actions">
       <span id="scores-refresh" class="fa fa-fw fa-refresh" tabindex="0">
