--- a/src/main/resources/www/referee/index.html
+++ b/src/main/resources/www/referee/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="search">
           <div class="input">
-            <input id="search" type="text" placeholder="&#61442;" />
+            <input id="search" type="text" placeholder="&#xf002;" />
           </div>
           <div class="actions">
             <span id="refresh" class="fa fa-fw fa-refresh" tabindex="0">
