--- a/src/main/resources/www/admin/events/index.html
+++ b/src/main/resources/www/admin/events/index.html
@@ -27,7 +27,7 @@
   <div class="body"></div>
   <div class="search">
     <div class="input">
-      <input id="events-search" type="text" placeholder="&#61442;" />
+      <input id="events-search" type="text" placeholder="&#xf002;" />
     </div>
     <div class="actions">
       <span id="events-add" class="fa fa-fw fa-plus" tabindex="0"></span>
