--- a/src/main/resources/www/admin/teams/index.html
+++ b/src/main/resources/www/admin/teams/index.html
@@ -24,7 +24,7 @@
   <div class="body"></div>
   <div class="search">
     <div class="input">
-      <input id="teams-search" type="text" placeholder="&#61442;" />
+      <input id="teams-search" type="text" placeholder="&#xf002;" />
     </div>
     <div class="actions">
       <span id="teams-add" class="fa fa-fw fa-plus" tabindex="0"></span>
