--- a/src/main/resources/www/admin/index.html
+++ b/src/main/resources/www/admin/index.html
@@ -8,6 +8,7 @@
 <html lang="<!--#locale-->">
   <head>
 <!--#html_head-->
+    <link rel="stylesheet" href="/admin/admin.css">
     <script src="/common.js" type="text/javascript"></script>
     <script src="/admin/admin.js" type="text/javascript"></script>
     <title><!--#str_admin_title--></title>
@@ -16,6 +17,7 @@
 <!--#html_body_start-->
     <div class="main_container">
       <div class="menu">
+        <button id="btn_menu"><span class="fa fa-bars"></span></button>
         <button id="btn_seasons"></button>
         <button id="btn_events"></button>
         <button id="btn_teams"></button>
@@ -25,6 +27,7 @@
         <button id="btn_users"></button>
         <button id="btn_about" class="right"></button>
       </div>
+<!--#html_side_panel-->
       <div id="tab_seasons" class="tab"></div>
       <div id="tab_events" class="tab"></div>
       <div id="tab_teams" class="tab"></div>
