--- a/src/main/resources/www/admin/index.html
+++ b/src/main/resources/www/admin/index.html
@@ -9,10 +9,9 @@
   <head>
 <!--#html_head-->
     <link rel="stylesheet" href="/admin/admin.css">
-    <script src="/common.js" type="text/javascript"></script>
     <script src="/admin/admin.js" type="text/javascript"></script>
     <title><!--#str_admin_title--></title>
-    </head>
+  </head>
   <body>
 <!--#html_body_start-->
     <div class="main_container">
@@ -27,7 +26,6 @@
         <button id="btn_users"></button>
         <button id="btn_about" class="right"></button>
       </div>
-<!--#html_side_panel-->
       <div id="tab_seasons" class="tab"></div>
       <div id="tab_events" class="tab"></div>
       <div id="tab_teams" class="tab"></div>
@@ -37,6 +35,7 @@
       <div id="tab_users" class="tab"></div>
       <div id="status" class="status"></div>
     </div>
+<!--#html_popup_menu-->
 <!--#html_body_end-->
   </body>
 </html>
