--- a/src/main/resources/www/timekeeper/index.html
+++ b/src/main/resources/www/timekeeper/index.html
@@ -105,6 +105,11 @@
           </button>
         </div>
       </div>
+      <div class="menu">
+        <button class="button_menu">
+          <i class="fa fa-2x fa-bars" aria-hidden="true"></i>
+        </button>
+      </div>
       <div class="test">
         <button class="button_test">
           <i class="fa fa-2x fa-cog" aria-hidden="true"></i>
@@ -138,6 +143,7 @@
       </div>
     </div>
   </div>
+<!--#html_popup_menu-->
 <!--#html_body_end-->
   </body>
 </html>
