Clean up the time keeper page.

--- a/src/main/resources/www/timekeeper/index.html
+++ b/src/main/resources/www/timekeeper/index.html
@@ -88,61 +88,57 @@
         <div class="o74 o0 o2 o3 o5 o6 o8 o9"></div>
         <div class="o75 o0 o1 o2 o3 o4 o5 o6 o7 o8 o9"></div>
       </div>
-      <div class="buttons">
-        <div class="start">
-          <button class="button_start">
-            <!--#str_timekeeper_start-->
-          </button>
-        </div>
-        <div class="cancel">
-          <button class="button_cancel">
-            <!--#str_timekeeper_cancel-->
-          </button>
-        </div>
-        <div class="reset">
-          <button class="button_reset">
-            <!--#str_timekeeper_reset-->
-          </button>
-        </div>
+      <div class="start">
+        <button id="button_start">
+          <!--#str_timekeeper_start-->
+        </button>
+      </div>
+      <div class="cancel">
+        <button id="button_cancel">
+          <!--#str_timekeeper_cancel-->
+        </button>
+      </div>
+      <div class="reset">
+        <button id="button_reset">
+          <!--#str_timekeeper_reset-->
+        </button>
       </div>
       <div class="menu">
-        <button class="button_menu">
-          <i class="fa fa-2x fa-bars" aria-hidden="true"></i>
+        <button id="button_menu">
+          <i class="fa fa-3x fa-bars" aria-hidden="true"></i>
         </button>
       </div>
       <div class="test">
-        <button class="button_test">
-          <i class="fa fa-2x fa-cog" aria-hidden="true"></i>
-        </button>
-      </div>
-    </div>
-    <div class="test_bg hidden">
-    </div>
-    <div class="test_main hidden">
-      <div class="container2">
-        <div class="test_title">
-          <h3>
-            <!--#str_timekeeper_test_title-->
-          </h3>
-        </div>
-        <button class="test_start">
-          <!--#str_timekeeper_test_start-->
-        </button>
-        <button class="test_end_game">
-          <!--#str_timekeeper_test_end_game-->
-        </button>
-        <button class="test_end">
-          <!--#str_timekeeper_test_end-->
-        </button>
-        <button class="test_cancel">
-          <!--#str_timekeeper_test_cancel-->
-        </button>
-        <button class="test_exit">
-          <i class="fa fa-2x fa-times-circle" aria-hidden="true"></i>
+        <button id="button_test">
+          <i class="fa fa-3x fa-cog" aria-hidden="true"></i>
         </button>
       </div>
     </div>
   </div>
+  <dialog id="test">
+    <div class="test_body">
+      <div class="test_title">
+        <h3>
+          <!--#str_timekeeper_test_title-->
+        </h3>
+      </div>
+      <button class="test_start">
+        <!--#str_timekeeper_test_start-->
+      </button>
+      <button class="test_end_game">
+        <!--#str_timekeeper_test_end_game-->
+      </button>
+      <button class="test_end">
+        <!--#str_timekeeper_test_end-->
+      </button>
+      <button class="test_cancel">
+        <!--#str_timekeeper_test_cancel-->
+      </button>
+      <button class="test_exit">
+        <i class="fa fa-3x fa-times" aria-hidden="true"></i>
+      </button>
+    </div>
+  </dialog>
 <!--#html_popup_menu-->
 <!--#html_body_end-->
   </body>
