Support multiple scoresheets per season.
This includes the World Festival Encore game from MasterPiece.

--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="event center"></div>
       <div class="logo2">
-        <img src="/logos/<!--#season_selected-->.png">
+        <img src="/logos/<!--#year_selected-->.png">
       </div>
       <div class="plt center"></div>
       <div class="numt center"></div>
