Popup menu changes:
* Hide "change password" for role-based users
* Add "WiFi info" for admins
* Show a WiFi QR code if WiFi info is known

--- a/src/main/resources/www/admin/index.html
+++ b/src/main/resources/www/admin/index.html
@@ -16,7 +16,7 @@
 <!--#html_body_start-->
     <div class="main_container">
       <div class="menu">
-        <button id="btn_menu"><span class="fa fa-bars"></span></button>
+<!--#menu_bar_item-->
         <button id="btn_seasons"></button>
         <button id="btn_events"></button>
         <button id="btn_teams"></button>
@@ -35,7 +35,7 @@
       <div id="tab_users" class="tab"></div>
       <div id="status" class="status"></div>
     </div>
-<!--#html_popup_menu-->
+<!--#popup_menu-->
 <!--#html_body_end-->
   </body>
 </html>
