--- a/src/main/resources/www/index.html
+++ b/src/main/resources/www/index.html
@@ -13,10 +13,7 @@
   </head>
   <body>
 <!--#html_body_start-->
-    <div id="links_wifi" class="links_tile">
-      <img src="/links/wifi.png">
-      <p><!--#str_links_wifi--></p>
-    </div>
+<!--#links_wifi-->
     <a href="/admin" target="_blank">
       <div id="links_admin" class="links_tile">
         <img src="/links/admin.png">
