--- a/src/main/resources/www/referee/index.html
+++ b/src/main/resources/www/referee/index.html
@@ -18,9 +18,7 @@
       <div class="list_container">
         <div class="heading">
           <div class="menu">
-            <button id="btn_menu">
-              <span class="fa fa-bars"></span>
-            </button>
+<!--#menu_bar_item-->
           </div>
           <div class="title">
             <span><!--#str_referee_heading--></span>
@@ -61,7 +59,7 @@
         </div>
       </div>
     </div>
-<!--#html_popup_menu-->
+<!--#popup_menu-->
 <!--#html_body_end-->
   </body>
 </html>
