--- a/src/main/resources/www/timekeeper/index.html
+++ b/src/main/resources/www/timekeeper/index.html
@@ -89,28 +89,26 @@
         <div class="o75 o0 o1 o2 o3 o4 o5 o6 o7 o8 o9"></div>
       </div>
       <div class="start">
-        <button id="button_start">
+        <button id="btn_start">
           <!--#str_timekeeper_start-->
         </button>
       </div>
       <div class="cancel">
-        <button id="button_cancel">
+        <button id="btn_cancel">
           <!--#str_timekeeper_cancel-->
         </button>
       </div>
       <div class="reset">
-        <button id="button_reset">
+        <button id="btn_reset">
           <!--#str_timekeeper_reset-->
         </button>
       </div>
       <div class="menu">
-        <button id="button_menu">
-          <i class="fa fa-3x fa-bars" aria-hidden="true"></i>
-        </button>
+<!--#menu_bar_item-->
       </div>
       <div class="test">
-        <button id="button_test">
-          <i class="fa fa-3x fa-cog" aria-hidden="true"></i>
+        <button id="btn_test">
+          <i class="fa fa-cog" aria-hidden="true"></i>
         </button>
       </div>
     </div>
@@ -139,7 +137,7 @@
       </button>
     </div>
   </dialog>
-<!--#html_popup_menu-->
+<!--#popup_menu-->
 <!--#html_body_end-->
   </body>
 </html>
