Add an animated logo for Submerged.

--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -19,7 +19,9 @@
       </div>
       <div class="event center"></div>
       <div class="logo2">
-        <img src="/logos/<!--#year_selected-->.png">
+        <img src="/logos/<!--#year_selected-->.gif"
+             onerror="this.onerror = null;
+                      this.src = '/logos/<!--#year_selected-->.png';">
       </div>
       <div class="plt center"></div>
       <div class="numt center"></div>
