--- a/src/main/resources/www/judge/index.html
+++ b/src/main/resources/www/judge/index.html
@@ -8,11 +8,50 @@
 <html lang="<!--#locale-->">
   <head>
 <!--#html_head-->
-    <title><!--#str_config_title--></title>
+    <link rel="stylesheet" href="/judge/judge.css">
+    <script src="/judge/judge.js" type="text/javascript"></script>
+    <title><!--#str_judge_title--></title>
   </head>
   <body>
 <!--#html_body_start-->
-    Coming soon...
+    <div id="list" class="hidden">
+      <div class="list_container">
+        <div class="heading">
+          <div class="menu">
+<!--#menu_bar_item-->
+          </div>
+          <div class="title">
+            <span><!--#str_judge_heading--></span>
+          </div>
+        </div>
+        <div class="body"></div>
+        <div class="search">
+          <div class="input">
+            <input id="search" type="text" placeholder="&#xf002;" />
+          </div>
+          <div class="actions">
+            <span id="refresh" class="fa fa-fw fa-refresh" tabindex="0">
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="rubric"> <!--class="hidden"-->
+      <div class="rubric_container">
+        <div class="header">
+          <span class="number"></span>
+          <span>&nbsp;:&nbsp;</span>
+          <span class="name"></span>
+        </div>
+        <div class="body">
+        </div>
+        <div class="footer">
+          <button id="discard" class="fa fa-times"></button>
+          <button id="save" class="fa fa-floppy-o"></button>
+        </div>
+      </div>
+    </div>
+<!--#popup_menu-->
 <!--#html_body_end-->
   </body>
 </html>
