Add the rubrics admin page.

--- a/src/main/resources/www/admin/events/index.html
+++ b/src/main/resources/www/admin/events/index.html
@@ -8,21 +8,21 @@
 <script src="/admin/events/events.js" type="text/javascript"></script>
 <div class="events_container">
   <div class="heading">
-    <div class="date">
+    <span class="date">
       <!--#str_events_list_date-->
-    </div>
-    <div class="matches">
+    </span>
+    <span class="matches">
       <!--#str_events_list_matches-->
-    </div>
-    <div class="name">
+    </span>
+    <span class="name">
       <!--#str_events_list_name-->
-    </div>
-    <div class="select">
+    </span>
+    <span class="select">
       <!--#str_events_list_select-->
-    </div>
-    <div class="actions">
+    </span>
+    <span class="actions">
       <!--#str_events_list_actions-->
-    </div>
+    </span>
   </div>
   <div class="body"></div>
   <div class="search">
