--- a/src/main/resources/www/admin/index.html
+++ b/src/main/resources/www/admin/index.html
@@ -21,8 +21,7 @@
         <button id="btn_events"></button>
         <button id="btn_teams"></button>
         <button id="btn_scores"></button>
-        <button id="btn_judging"></button>
-        <button id="btn_standings"></button>
+        <button id="btn_rubrics"></button>
         <button id="btn_users"></button>
         <button id="btn_about" class="right"></button>
       </div>
@@ -30,8 +29,7 @@
       <div id="tab_events" class="tab"></div>
       <div id="tab_teams" class="tab"></div>
       <div id="tab_scores" class="tab"></div>
-      <div id="tab_judging" class="tab"></div>
-      <div id="tab_standings" class="tab"></div>
+      <div id="tab_rubrics" class="tab"></div>
       <div id="tab_users" class="tab"></div>
       <div id="status" class="status"></div>
     </div>
