--- a/src/main/resources/www/admin/scores/index.html
+++ b/src/main/resources/www/admin/scores/index.html
@@ -8,24 +8,24 @@
 <script src="/admin/scores/scores.js" type="text/javascript"></script>
 <div class="scores_container">
   <div class="heading">
-    <div class="number">
+    <span class="number">
       <!--#str_scores_number-->
-    </div>
-    <div class="name">
+    </span>
+    <span class="name">
       <!--#str_scores_name-->
-    </div>
-    <div class="match1">
+    </span>
+    <span class="match1">
       <!--#str_scores_match1-->
-    </div>
-    <div class="match2">
+    </span>
+    <span class="match2">
       <!--#str_scores_match2-->
-    </div>
-    <div class="match3">
+    </span>
+    <span class="match3">
       <!--#str_scores_match3-->
-    </div>
-    <div class="match4">
+    </span>
+    <span class="match4">
       <!--#str_scores_match4-->
-    </div>
+    </span>
   </div>
   <div class="body"></div>
   <div class="search">
