--- a/src/main/resources/www/admin/teams/index.html
+++ b/src/main/resources/www/admin/teams/index.html
@@ -8,18 +8,18 @@
 <script src="/admin/teams/teams.js" type="text/javascript"></script>
 <div class="teams_container">
   <div class="heading">
-    <div class="number">
+    <span class="number">
       <!--#str_teams_list_number-->
-    </div>
-    <div class="name">
+    </span>
+    <span class="name">
       <!--#str_teams_list_name-->
-    </div>
-    <div class="at_event">
+    </span>
+    <span class="at_event">
       <!--#str_teams_list_at_event-->
-    </div>
-    <div class="actions">
+    </span>
+    <span class="actions">
       <!--#str_teams_list_actions-->
-    </div>
+    </span>
   </div>
   <div class="body"></div>
   <div class="search">
