--- a/src/main/resources/www/admin/users/index.html
+++ b/src/main/resources/www/admin/users/index.html
@@ -8,27 +8,27 @@
 <script src="/admin/users/users.js" type="text/javascript"></script>
 <div class="users_container">
   <div class="heading">
-    <div class="name">
+    <span class="name">
       <!--#str_users_list_name-->
-    </div>
-    <div class="admin">
+    </span>
+    <span class="admin">
       <!--#str_users_list_admin-->
-    </div>
-    <div class="host">
+    </span>
+    <span class="host">
       <!--#str_users_list_host-->
-    </div>
-    <div class="judge">
+    </span>
+    <span class="judge">
       <!--#str_users_list_judge-->
-    </div>
-    <div class="referee">
+    </span>
+    <span class="referee">
       <!--#str_users_list_referee-->
-    </div>
-    <div class="timekeeper">
+    </span>
+    <span class="timekeeper">
       <!--#str_users_list_timekeeper-->
-    </div>
-    <div class="actions">
+    </span>
+    <span class="actions">
       <!--#str_users_list_actions-->
-    </div>
+    </span>
   </div>
   <div class="body">
   </div>
