League standings display.

--- a/src/main/resources/www/index.html
+++ b/src/main/resources/www/index.html
@@ -38,6 +38,12 @@
         <p><!--#str_links_scoreboard--></p>
       </div>
     </a>
+    <a href="/standings" target="_blank">
+      <div id="links_standings" class="links_tile">
+        <img src="/links/standings.png">
+        <p><!--#str_links_standings--></p>
+      </div>
+    </a>
     <a href="/timekeeper" target="_blank">
       <div id="links_timekeeper" class="links_tile">
         <img src="/links/timekeeper.png">
