--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container4">
       <div class="logo1">
-        <img src="/scoreboard/fll.png">
+        <img src="/fll.png">
       </div>
       <div class="event center"></div>
       <div class="logo2">
