Add a button for downloading a CSV of the scores.

--- a/src/main/resources/www/admin/scores/index.html
+++ b/src/main/resources/www/admin/scores/index.html
@@ -35,6 +35,8 @@
     <div class="actions">
       <span id="scores-refresh" class="fa fa-fw fa-refresh" tabindex="0">
       </span>
+      <span id="scores-download" class="fa fa-fw fa-download" tabindex="0">
+      </span>
     </div>
   </div>
 </div>
