--- a/src/main/resources/www/admin/index.html
+++ b/src/main/resources/www/admin/index.html
@@ -17,6 +17,7 @@
     <div class="main_container">
       <div class="menu">
 <!--#menu_bar_item-->
+        <button id="btn_config"></button>
         <button id="btn_seasons"></button>
         <button id="btn_events"></button>
         <button id="btn_teams"></button>
@@ -25,6 +26,7 @@
         <button id="btn_users"></button>
         <button id="btn_about" class="right"></button>
       </div>
+      <div id="tab_config" class="tab"></div>
       <div id="tab_seasons" class="tab"></div>
       <div id="tab_events" class="tab"></div>
       <div id="tab_teams" class="tab"></div>
