Add an optional timer display to the scoreboard.

--- a/src/main/resources/www/admin/config/index.html
+++ b/src/main/resources/www/admin/config/index.html
@@ -52,6 +52,47 @@
   <hr>
   <div class="section">
     <span class="fa fa-fw fa-chevron-down" tabindex="0"></span>
+    <span><!--#str_config_scoreboard_section--></span>
+  </div>
+  <table>
+    <tbody>
+      <tr>
+        <td>
+          <span><!--#str_config_scoreboard_timer--></span>
+        </td>
+        <td class="flex">
+          <span id="btn_timer" class="fa-stack fa-lg" tabindex="0">
+            <span class="fa fa-check fa-stack-1x" style="display: none"></span>
+            <span class="fa fa-square-o fa-stack-2x"></span>
+          </span>
+        </td>
+      </tr>
+      <tr id="row_timer_location" style="display: none">
+        <td>
+          <span><!--#str_config_scoreboard_timer_location--></span>
+        </td>
+        <td class="flex">
+          <span id="btn_timer_top" class="fa-stack fa-lg" tabindex="0">
+            <span class="fa fa-check fa-stack-1x" style="display: none"></span>
+            <span class="fa fa-circle-o fa-stack-2x"></span>
+          </span>
+          <span id="label_timer_top">
+            <!--#str_config_scoreboard_timer_top-->
+          </span>
+          <span id="btn_timer_center" class="fa-stack fa-lg" tabindex="0">
+            <span class="fa fa-check fa-stack-1x" style="display: none"></span>
+            <span class="fa fa-circle-o fa-stack-2x"></span>
+          </span>
+          <span id="label_timer_center">
+            <!--#str_config_scoreboard_timer_center-->
+          </span>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <div class="section">
+    <span class="fa fa-fw fa-chevron-down" tabindex="0"></span>
     <span><!--#str_config_wifi_section--></span>
   </div>
   <table>
