--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -96,5 +96,81 @@
       <div class="m37 center"></div>
       <div class="m47 center"></div>
     </div>
+    <div class="timer_bg">
+      <div class="bg"></div>
+    </div>
+    <div class="timer">
+      <div class="h11 m0 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+      <div class="h12 m0 m2 m3 m5 m6 m7 m8 m9"></div>
+      <div class="h13 m0 m2 m3 m5 m6 m7 m8 m9"></div>
+      <div class="h14 m0 m2 m3 m5 m6 m7 m8 m9"></div>
+      <div class="h15 m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+      <div class="h21 m0 m4 m5 m6 m8 m9"></div>
+      <div class="h25 m0 m1 m2 m3 m4 m7 m8 m9"></div>
+      <div class="h31 m0 m4 m5 m6 m8 m9"></div>
+      <div class="h35 m0 m1 m2 m3 m4 m7 m8 m9"></div>
+      <div class="h41 nc m0 m2 m3 m4 m5 m6 m8 m9"></div>
+      <div class="h42 nc m2 m3 m4 m5 m6 m8 m9"></div>
+      <div class="h43 nc m2 m3 m4 m5 m6 m8 m9"></div>
+      <div class="h44 nc m2 m3 m4 m5 m6 m8 m9"></div>
+      <div class="h45 nc m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+      <div class="h51 m0 m2 m6 m8"></div>
+      <div class="h55 m0 m1 m3 m4 m5 m6 m7 m8 m9"></div>
+      <div class="h61 m0 m2 m6 m8"></div>
+      <div class="h65 m0 m1 m3 m4 m5 m6 m7 m8 m9"></div>
+      <div class="h71 m0 m2 m3 m5 m6 m8 m9"></div>
+      <div class="h72 m0 m2 m3 m5 m6 m8 m9"></div>
+      <div class="h73 m0 m2 m3 m5 m6 m8 m9"></div>
+      <div class="h74 m0 m2 m3 m5 m6 m8 m9"></div>
+      <div class="h75 m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+      <div class="c31 nc m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+      <div class="c51 nc m0 m1 m2 m3 m4 m5 m6 m7 m8 m9"></div>
+      <div class="t11 t0 t2 t3 t4 t5 t6 t7 t8 t9"></div>
+      <div class="t12 t0 t2 t3 t5 t6 t7 t8 t9"></div>
+      <div class="t13 t0 t2 t3 t5 t6 t7 t8 t9"></div>
+      <div class="t14 t0 t2 t3 t5 t6 t7 t8 t9"></div>
+      <div class="t15 t0 t1 t2 t3 t4 t5 t6 t7 t8 t9"></div>
+      <div class="t21 t0 t4 t5 t6 t8 t9"></div>
+      <div class="t25 t0 t1 t2 t3 t4 t7 t8 t9"></div>
+      <div class="t31 t0 t4 t5 t6 t8 t9"></div>
+      <div class="t35 t0 t1 t2 t3 t4 t7 t8 t9"></div>
+      <div class="t41 nc t0 t2 t3 t4 t5 t6 t8 t9"></div>
+      <div class="t42 nc t2 t3 t4 t5 t6 t8 t9"></div>
+      <div class="t43 nc t2 t3 t4 t5 t6 t8 t9"></div>
+      <div class="t44 nc t2 t3 t4 t5 t6 t8 t9"></div>
+      <div class="t45 nc t0 t1 t2 t3 t4 t5 t6 t7 t8 t9"></div>
+      <div class="t51 t0 t2 t6 t8"></div>
+      <div class="t55 t0 t1 t3 t4 t5 t6 t7 t8 t9"></div>
+      <div class="t61 t0 t2 t6 t8"></div>
+      <div class="t65 t0 t1 t3 t4 t5 t6 t7 t8 t9"></div>
+      <div class="t71 t0 t2 t3 t5 t6 t8 t9"></div>
+      <div class="t72 t0 t2 t3 t5 t6 t8 t9"></div>
+      <div class="t73 t0 t2 t3 t5 t6 t8 t9"></div>
+      <div class="t74 t0 t2 t3 t5 t6 t8 t9"></div>
+      <div class="t75 t0 t1 t2 t3 t4 t5 t6 t7 t8 t9"></div>
+      <div class="o11 o0 o2 o3 o4 o5 o6 o7 o8 o9"></div>
+      <div class="o12 o0 o2 o3 o5 o6 o7 o8 o9"></div>
+      <div class="o13 o0 o2 o3 o5 o6 o7 o8 o9"></div>
+      <div class="o14 o0 o2 o3 o5 o6 o7 o8 o9"></div>
+      <div class="o15 o0 o1 o2 o3 o4 o5 o6 o7 o8 o9"></div>
+      <div class="o21 o0 o4 o5 o6 o8 o9"></div>
+      <div class="o25 o0 o1 o2 o3 o4 o7 o8 o9"></div>
+      <div class="o31 o0 o4 o5 o6 o8 o9"></div>
+      <div class="o35 o0 o1 o2 o3 o4 o7 o8 o9"></div>
+      <div class="o41 nc o0 o2 o3 o4 o5 o6 o8 o9"></div>
+      <div class="o42 nc o2 o3 o4 o5 o6 o8 o9"></div>
+      <div class="o43 nc o2 o3 o4 o5 o6 o8 o9"></div>
+      <div class="o44 nc o2 o3 o4 o5 o6 o8 o9"></div>
+      <div class="o45 nc o0 o1 o2 o3 o4 o5 o6 o7 o8 o9"></div>
+      <div class="o51 o0 o2 o6 o8"></div>
+      <div class="o55 o0 o1 o3 o4 o5 o6 o7 o8 o9"></div>
+      <div class="o61 o0 o2 o6 o8"></div>
+      <div class="o65 o0 o1 o3 o4 o5 o6 o7 o8 o9"></div>
+      <div class="o71 o0 o2 o3 o5 o6 o8 o9"></div>
+      <div class="o72 o0 o2 o3 o5 o6 o8 o9"></div>
+      <div class="o73 o0 o2 o3 o5 o6 o8 o9"></div>
+      <div class="o74 o0 o2 o3 o5 o6 o8 o9"></div>
+      <div class="o75 o0 o1 o2 o3 o4 o5 o6 o7 o8 o9"></div>
+    </div>
   </body>
 </html>
