--- a/src/main/resources/www/index.html
+++ b/src/main/resources/www/index.html
@@ -13,49 +13,53 @@
   </head>
   <body>
 <!--#html_body_start-->
+    <div class="tiles">
 <!--#links_wifi-->
-    <a href="/admin" target="_blank">
-      <div id="links_admin" class="links_tile">
-        <img src="/links/admin.png">
-        <p><!--#str_links_admin--></p>
-      </div>
-    </a>
-    <a href="/judge" target="_blank">
-      <div id="links_judge" class="links_tile">
-        <img src="/links/judge.png">
-        <p><!--#str_links_judge--></p>
-      </div>
-    </a>
-    <a href="/referee" target="_blank">
-      <div id="links_referee" class="links_tile">
-        <img src="/links/referee.png">
-        <p><!--#str_links_referee--></p>
-      </div>
-    </a>
-    <a href="/scoreboard" target="_blank">
-      <div id="links_scoreboard" class="links_tile">
-        <img src="/links/scoreboard.png">
-        <p><!--#str_links_scoreboard--></p>
-      </div>
-    </a>
-    <a href="/standings" target="_blank">
-      <div id="links_standings" class="links_tile">
-        <img src="/links/standings.png">
-        <p><!--#str_links_standings--></p>
-      </div>
-    </a>
-    <a href="/timekeeper" target="_blank">
-      <div id="links_timekeeper" class="links_tile">
-        <img src="/links/timekeeper.png">
-        <p><!--#str_links_timekeeper--></p>
-      </div>
-    </a>
-    <a href="/timer" target="_blank">
-      <div id="links_timer" class="links_tile">
-        <img src="/links/timer.png">
-        <p><!--#str_links_timer--></p>
-      </div>
-    </a>
+      <a href="/admin" target="_blank">
+        <div id="links_admin" class="links_tile">
+          <img src="/links/admin.png">
+          <p><!--#str_links_admin--></p>
+        </div>
+      </a>
+      <a href="/judge" target="_blank">
+        <div id="links_judge" class="links_tile">
+          <img src="/links/judge.png">
+          <p><!--#str_links_judge--></p>
+        </div>
+      </a>
+      <a href="/referee" target="_blank">
+        <div id="links_referee" class="links_tile">
+          <img src="/links/referee.png">
+          <p><!--#str_links_referee--></p>
+        </div>
+      </a>
+      <a href="/scoreboard" target="_blank">
+        <div id="links_scoreboard" class="links_tile">
+          <img src="/links/scoreboard.png">
+          <p><!--#str_links_scoreboard--></p>
+        </div>
+      </a>
+      <a href="/standings" target="_blank">
+        <div id="links_standings" class="links_tile">
+          <img src="/links/standings.png">
+          <p><!--#str_links_standings--></p>
+        </div>
+      </a>
+      <a href="/timekeeper" target="_blank">
+        <div id="links_timekeeper" class="links_tile">
+          <img src="/links/timekeeper.png">
+          <p><!--#str_links_timekeeper--></p>
+        </div>
+      </a>
+      <a href="/timer" target="_blank">
+        <div id="links_timer" class="links_tile">
+          <img src="/links/timer.png">
+          <p><!--#str_links_timer--></p>
+        </div>
+      </a>
+      <br clear="all">
+      <br>
+    </div>
 <!--#html_body_end-->
   </body>
 </html>
