Support an event with two matches.

--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -13,7 +13,7 @@
     <title><!--#str_scoreboard_title--></title>
   </head>
   <body>
-    <div class="container4">
+    <div class="scores container4">
       <div class="logo1">
         <img src="/fll.png">
       </div>
