--- a/src/main/resources/www/admin/teams/index.html
+++ b/src/main/resources/www/admin/teams/index.html
@@ -6,8 +6,11 @@
 -->
 <link rel="stylesheet" href="/admin/teams/teams.css">
 <script src="/admin/teams/teams.js" type="text/javascript"></script>
-<div class="teams_container">
+<div class="teams_container<!--#support_divisions-->">
   <div class="heading">
+    <span class="division">
+      <!--#str_teams_list_division-->
+    </span>
     <span class="number">
       <!--#str_teams_list_number-->
     </span>
