Allow the scoreboard to be paused

--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -172,5 +172,8 @@
       <div class="o74 o0 o2 o3 o5 o6 o8 o9"></div>
       <div class="o75 o0 o1 o2 o3 o4 o5 o6 o7 o8 o9"></div>
     </div>
+    <div class="paused">
+      <i class="fa fa-pause"></i>
+    </div>
   </body>
 </html>
